--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Waffle Clássico</h1>
 
         <figure>
-            <img src="img/mae-mu-dEUyLofZe5o-unsplash.jpg" alt="Texto descritivo da imagem" />
+            <img src="img/cardapio.png" alt="Texto descritivo da imagem" />
             <figcaption>Imagem meramente ilustrativa</figcaption>
          </figure>
 
