--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
    rel="stylesheet"
 />
-<link rel="shortcut icon" href="img/mae-mu-dEUyLofZe5o-unsplash-min.jpg" type="image/x-icon">
+<link rel="shortcut icon" href="img/cardapio.png" type="image/x-icon">
     <title>Receita de Waffles</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
         <h1>Waffle Clássico</h1>
 
         <figure>
-            <img src="img/cardapio.png" alt="Texto descritivo da imagem" />
+            <img src="img/mae-mu-dEUyLofZe5o-unsplash-min.jpg" alt="Texto descritivo da imagem" />
             <figcaption>Imagem meramente ilustrativa</figcaption>
          </figure>
 
